# rust_shopping_api

./: Cargo.toml
src/: apis.rs  main.rs  routes.rs
src/apis/: config.rs  jwt_auth.rs
src/apis/login/: email.rs  handler.rs  login_route.rs  model.rs  response.rs
src/apis/v1/: v_route.rs
src/apis/v1/category/: category_handler.rs  category_model.rs  category_routes.rs
src/apis/v1/products/: products_handler.rs  products_model.rs  products_routes.rs
