[package]
name = "shopping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
handlebars = "4.5.0"
jsonwebtoken = "9.1.0"
lettre = { version = "0.11.1", features = ["tokio1", "tokio1-native-tls"] }
proc-macro2 = "1.0.69"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-shared-db = { version = "0.33.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["serde", "v4"] }

